# python-architecture-linter-demo

./: .flake8  README.md  mypy.ini  pyproject.toml
.github/workflows/: main.yml
demo_project/logic_module/: provider.py
demo_project/module_runtime/: provider.py  run.py
